[package]
name = "deasync"
version = "0.1.0"
authors = ["qiuchengxuan <qiuchengxuan@gmail.com>"]
edition = "2018"
readme = "README.md"
license = "MIT"
description = "A procedure macro to turn async implemention into sync"
repository = "https://github.com/qiuchengxuan/deasync-rs"
documentation = "https://docs.rs/deasync"
keywords = ["deasync", "async", "futures", "macros", "proc_macro"]

[dependencies]
proc-macro2 = "1.0"
quote = "1.0"
syn = { version = "1.0", features = ["visit-mut", "full"] }

[lib]
proc-macro = true

[features]
bypass = []
default = []
